# xtream2m3u

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-04-23-020504_create_types/: down.sql  up.sql
migrations/2025-04-23-232147_create_categories/: down.sql  up.sql
migrations/2025-04-25-011227_create_channels/: down.sql  up.sql
migrations/2025-04-25-220356_create_history/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/args/: args.rs
src/types/: account.rs  mod.rs  series.rs
