[package]
name = "xtream2m3u"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
m3u_parser = { version = "0.1.2" }
reqwest = { version = "0.12.15", features = ["json"] }
sanitise-file-name = "1.0.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
similar = "2.7.0"
static_str_ops = "0.1.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time", "full"] }
toml = "0.8.19"
