[package]
name = "xtream2m3u"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
diesel = { version = "2.2.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
m3u_parser = { version = "0.1.2" }
reqwest = { version = "0.12.15", features = ["json"] }
sanitise-file-name = "1.0.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
similar = "2.7.0"
static_str_ops = "0.1.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time", "full"] }
toml = "0.8.19"
