[package]
name = "xtream2m3u"
version = "0.1.2"
edition = "2024"

[dependencies]
chrono = ">=0.4.42"
clap = { version = ">=4.5.37", features = ["derive"] }
m3u_parser = { version = "0.1.2" }
reqwest = { version = ">=0.12.23", features = ["json"] }
sanitise-file-name = "1.0.0"
serde = ">=1.0.226"
serde_derive = "1.0.217"
serde_json = ">=1.0.145"
similar = "2.7.0"
static_str_ops = "0.1.2"
tokio = { version = ">=1.47.1", features = ["rt", "rt-multi-thread", "macros",
    "net", "time", "full"] }
toml = "0.8.19"
